--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ nav:
     - { Tags: '/blog/tags/' }
   About:
     - '/about/'
-  Github Project:
-    - 'http://codinfox.github.io/'
+  # Github Project:
+  #   - 'http://codinfox.github.io/'
 
 # Where are tags and categories displayed
 tag_page: '/blog/tags/'
