--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
 #### Exclude
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
+repository: yui7890/yui7890.github.io
+github: [metadata]
+
 #### Code Highlighter
 # 'pygments' is unsupported on GitHub Pages now.
 highlighter: rouge
@@ -109,8 +112,8 @@ toc:
 
 #### Links
 links:
-  码农圈: https://coderq.com
-  Jark's Blog: http://wuchong.me
+  Google: https://www.google.co.kr/
+  NAVER: https://www.naver.com/
 
 #### Comment
 duoshuo_shortname:    ## e.g. wuchong      your duoshuo short name.       website: http://duoshuo.com
@@ -146,8 +149,8 @@ totop: true           ## if you want to scroll to top in every post set the valu
 
 #### Custom Search
 google_cse:
-  enable: false
-  cx: 018294693190868310296:abnhpuysycw  ## e.g. 018294693190868310296:abnhpuysycw your Custom Search ID.
+  enable: true
+  cx: 001917551734242709439:swlm90cw6ew ## e.g. 018294693190868310296:abnhpuysycw your Custom Search ID.
 ## https://www.google.com/cse/
 ## To enable the custom search You must create a "search" folder in '/source' and a "index.md" file
 ## set the 'front-matter' as
