--- a/_config.yml
+++ b/_config.yml
@@ -7,16 +7,16 @@ permalink:           pretty
 # Setup
 title:               The Hitchhiker's Guide to the Data Galaxy
 tagline:             데이터 은하수를 여행하는 히치하이커를 위한 안내서
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
-baseurl:             ''
+description:         'This is a blog about data analysis and financial engineering. Made by <a href="https://twitter.com/yui7890" target="_blank">@yui7890</a>.'
+url:                 ""
+baseurl:             ""
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              HKim
+  url:               https://twitter.com/yui7890
+  email:
 
 # Custom vars
 version:             1.0.0
