profile and linkedin

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ twitter: yui7890
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: hyeongjun-kim-5942a2112
 # youtube: myyoutube
 # spotify: myspotify
 github: dr-hkim
@@ -57,7 +57,7 @@ authors:
         name: Hyeongjun Kim
         bio: Financial Economist, Data Scientist, and Hearthstone Player
         external-image: false
-        picture: assets/images/140816_imadeface.jpg
+        picture: assets/images/140816_imadeface2.jpg
         twitter: yui7890
 #    jamesfoster:
 #        name: James Foster
