--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ url: http://Dr-HKim.github.io
 
 permalink: /:title/
 
+
 # To enable google analytics, supply your token below
 analytics-google: 'UA-108453160-1'
 
@@ -30,8 +31,8 @@ analytics-google: 'UA-108453160-1'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
-  categories: [] # only show disqus for posts that have these categories
+  shortname: dr-hkim # enter this from your disqus account
+  categories: [blog] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # facebook: myfacebook
@@ -122,3 +123,6 @@ gems:
   - jemoji
   - jekyll-admin
   - jekyll-paginate
+
+
+markdown:  kramdown
