--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ analytics-google: 'UA-108453160-1'
 # if you don't want comments in your posts, leave categories empty
 disqus:
   shortname: dr-hkim # enter this from your disqus account
-  categories: [blog] # only show disqus for posts that have these categories
+  categories: [] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # facebook: myfacebook
