--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ github: dr-hkim
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-#medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 #email: myemail@gmail.com
@@ -73,8 +73,8 @@ authors:
 width: large
 
 # if you don't need pagination, comment the *paginate* configs below
-# paginate: 10
-# paginate_path: "blog/:num/"
+paginate: 50
+paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
 # projects: true
