--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ github: dr-hkim
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-#email: myemail@gmail.com
+# email: myemail@gmail.com
 
 authors:
     hkim:
@@ -94,9 +94,11 @@ related: true
 
 # Display links for next and previous posts for the specified categories
 # post-advance-links: [blog]
-# post-advance-links:
-#  - blog
-#  - Python for Beginners
+post-advance-links:
+  - blog
+  - Python for Beginners
+  - R for Beginners
+  - Data Analysis
 
 # show author block at the end of a post ?
 show-author: true
